# interpret

./: README.md  dune-project  taulang.opam
examples/: hello-world.tau
lib/: ast.ml  dune  evaluate.ml  lexer.ml  parser.ml  utils.ml
test/: dune  test_framework.ml  test_helpers.ml  test_taulang.ml
