(lang dune 3.20)

(name taulang)

(generate_opam_files true)

(source
 (github dipamsen/interpret))

(authors "Dipam Sen <dipamsen.fp@gmail.com>")

(maintainers "Dipam Sen <dipamsen.fp@gmail.com>")

(license LICENSE)

(documentation https://url/to/documentation)

(package
 (name taulang)
 (synopsis "A short synopsis")
 (description "A longer description")
 (depends ocaml)
 (tags
  ("add topics" "to describe" your project)))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/reference/dune-project/index.html
